caret should not move into even more ligated Emoji sequences
Categories
(Core :: Layout: Text and Fonts, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox66 | --- | fixed |
People
(Reporter: thomas.a.levy, Assigned: jfkthame)
References
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:64.0) Gecko/20100101 Firefox/64.0
Steps to reproduce:
go to the url "data:text/html;charset=utf-8,<h1 contenteditable>%F0%9F%92%82%E2%80%8D%E2%99%80%EF%B8%8F", place your cursor to the right of the emoji and press the left arrow key
Actual results:
Cursor is midway through the female guard emoji
Expected results:
Cursor goes to the left of the female guard emoji.
| Reporter | ||
Updated•6 years ago
|
| Reporter | ||
Comment 1•6 years ago
|
||
I believe this is unfinished business from bug #1484094
| Assignee | ||
Comment 2•6 years ago
•
|
||
Ah, I see... this will also apply to emoji that are constructed of [man/woman] + zwj + [occupation] + vs-16, such as the sequences for "man/woman health worker", "man/woman judge", etc.
| Assignee | ||
Comment 3•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
Updated•6 years ago
|
Comment 5•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Comment 6•6 years ago
|
||
I have reproduced this bug with Nightly 66.0a1 (2019-01-07) on Windows 10, 64 Bit. This fix of this bug is verified with latest Beta 66.0b5!
Build ID : 20190204181317
User Agent : Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:66.0) Gecko/20100101 Firefox/66.0
Description
•