Bug 1518401 - Exclude caret position within ligated emoji sequence where the second component was a BMP symbol + VS16. r=m_kato